--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,18 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<repositories>
+    <repository>
+        <id>central</id>
+        <url>https://repo.maven.apache.org/maven2</url>
+        <releases>
+            <enabled>true</enabled>
+        </releases>
+        <snapshots>
+            <enabled>false</enabled>
+        </snapshots>
+    </repository>
+</repositories>
 
 	<build>
 		<plugins>
